@@ -2,6 +2,7 @@
 ------
 
 * Add `passthrough` argument to `BaseResponse` object. See #557
+* Add support for the `loose` version of `json_params_matcher` via named argument `strict_match`. See #551
 
 0.21.0
 ------
